Function for copying storage to userData on startup

--- a/app/index.html
+++ b/app/index.html
@@ -6,5 +6,10 @@
   </head>
   <body>
     <h1>DARK SOULS DT</h1>
+
+    <ul id="gamesList"></ul>
+
+    <script>const exports = {};</script>
+    <script src="index.js"></script>
   </body>
 </html>
