--- a/app/saves.html
+++ b/app/saves.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+    <div id="newSaveOverlay" style="display: none">
+      <h2>New save</h2>
+      <input type="text" placeholder="New save name" id="newSaveName">
+      <button id="createSaveButton" type="button">Create new save</button>
+    </div>
+
     <h1>Save window</h1>
+
+    <button id="newSaveButton" type="button">New Save</button>
 
     <script>const exports = {};</script>
     <script src="saves.js"></script>
