Added basic save list displaying

--- a/app/saves.html
+++ b/app/saves.html
@@ -13,6 +13,8 @@
 
     <h1>Save window</h1>
 
+    <ul id="saveList"></ul>
+
     <button id="newSaveButton" type="button">New Save</button>
 
     <script>const exports = {};</script>
