Saves re-displayed & overlay hidden on save creation

--- a/app/saves.html
+++ b/app/saves.html
@@ -13,6 +13,7 @@
 
     <h1>Save window</h1>
 
+    <h2>Save List</h2>
     <ul id="saveList"></ul>
 
     <button id="newSaveButton" type="button">New Save</button>
