Function for displaying home page

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     </nav>
 
     <div id="content">
-      <div id="index">
+      <div id="home">
         <h1>DARK SOULS DT</h1>
 
         <ul id="gamesList"></ul>        
