Added settings button and a hidden settings div

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <nav>
-      <button id="homeButton">Home</button>      
+      <button id="homeButton">Home</button>
+      <button id="settingsButton">Settings</button> 
     </nav>
 
     <div id="content">
@@ -30,6 +31,10 @@
         <ul id="saveList"></ul>
     
         <button id="newSaveButton" type="button">New Save</button>
+      </div>
+
+      <div id="settings">
+        <h1>Settings</h1>
       </div>
     </div>
 
