Save information now being displayed

--- a/app/overlay.html
+++ b/app/overlay.html
@@ -6,5 +6,11 @@
   </head>
   <body>
     <h1>Overlay</h1>
+
+    <h2 id="saveName"></h2>
+    <ul id="saveInfo"></ul>
+
+    <script>const exports = {};</script>
+    <script src="overlay.js"></script>
   </body>
 </html>
