Moved compiled js files to seperate folder and added to .gitignore

--- a/app/overlay.html
+++ b/app/overlay.html
@@ -11,6 +11,6 @@
     <ul id="saveInfo"></ul>
 
     <script>const exports = {};</script>
-    <script src="overlay.js"></script>
+    <script src="overlayPage.js"></script>
   </body>
 </html>
