Moved compiled js back into its own folder

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,6 @@
     </div>
 
     <script>const exports = {};</script>
-    <script src="index.js"></script>
+    <script>require('./js/index')</script>
   </body>
 </html>
