--- a/app/overlay.html
+++ b/app/overlay.html
@@ -11,6 +11,6 @@
     <ul id="saveInfo"></ul>
 
     <script>const exports = {};</script>
-    <script src="./page/overlay-page.js"></script>
+    <script>require('./js/page/overlay-page')</script>
   </body>
 </html>
