--- a/app/overlay.html
+++ b/app/overlay.html
@@ -3,6 +3,7 @@
   <head>
     <title>Overlay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./main.css">
   </head>
   <body>
     <h1>Overlay</h1>
