--- a/app/overlay.html
+++ b/app/overlay.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Overlay</h1>
+    <button id="startTimerButton">Start Timer</button>
+    <button id="stopTimerButton">Stop Timer</button>
+
 
     <h2 id="saveName"></h2>
     <ul id="saveInfo"></ul>
