Now using single switch() function for turning timer on/off

--- a/app/overlay.html
+++ b/app/overlay.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <h1>Overlay</h1>
-    <button id="startTimerButton">Start Timer</button>
-    <button id="stopTimerButton">Stop Timer</button>
+    <button id="timerButton">Timer</button>
 
 
     <h2 id="saveName"></h2>
